--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "winston": "^3.3.3"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
