--- a/package.json
+++ b/package.json
@@ -6,39 +6,37 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node ./src/seeders"
+    "test": "mocha ./src/test --timeout 10000",
+    "seed": "NODE_ENV=test && node ./src/seeders"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cli-table": "^0.3.5",
     "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
-    "express-list-endpoints": "^5.0.0",
-    "faker": "^5.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mailgen": "^2.0.10",
     "mailgun-js": "^0.22.0",
     "moment": "^2.24.0",
     "mongoose": "^5.8.9",
-    "multer": "^1.4.2",
-    "ng-faker": "^1.3.1",
-    "passport": "^0.4.1",
     "path": "^0.12.7",
     "random-int": "^2.0.1",
-    "randomstring": "^1.1.5",
-    "slugify": "^1.4.5",
     "winston": "^3.3.3"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5",
+    "cli-table": "^0.3.5",
+    "faker": "^5.4.0",
+    "express-list-endpoints": "^5.0.0"
   }
 }
