--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "mongoose": "^5.8.9",
     "path": "^0.12.7",
     "random-int": "^2.0.1",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "express-list-endpoints": "^5.0.0",
+    "cli-table": "^0.3.5"
   },
   "author": "",
   "license": "ISC",
@@ -35,8 +37,6 @@
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
     "mocha": "^2.4.5",
-    "cli-table": "^0.3.5",
-    "faker": "^5.4.0",
-    "express-list-endpoints": "^5.0.0"
+    "faker": "^5.4.0"
   }
 }
